...
        dismiss(animated: true, completion: nil)
    }
    
    @IBAction func searchButtonTapped(_ sender: Any) {
        statusLabel.isHidden = true
        guard let queryCountry = countryTextField.text, !queryCountry.isEmpty else {
            showSearchError(text: "Country cannot be empty.")
            return }
        guard let queryCity = cityTextField.text, !queryCity.isEmpty else {
            showSearchError(text: "Please provide City name.")
            return }
                handleSearch(queryCity: queryCity, queryCountry: queryCountry)
                return
...
