...
                                                <accessibility key="accessibilityConfiguration" identifier="SearchButton"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="232" id="UYZ-ak-C8i"/>
                                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="40" id="bHd-K1-I8L"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="18"/>
                                                <state key="normal" title="Search">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <connections>
                                                    <action selector="searchButtonTapped:" destination="9SI-A9-5Om" eventType="touchUpInside" id="VaU-hW-qDf"/>
                                                </connections>
                                            </button>
...
